# web-grilo-player

./: ChangeLog  Makefile.am  README  autogen.sh  configure.ac
data/css/: breadcrumbs.css  style.css
data/html/: index.html  test.html
player/: Makefile.am  test.html  web-grilo-player-example.c
src/: Makefile.am  wgp-main.c  wgp-util.c  wgp-view.c  wgp-view.h
